@@ -115,6 +115,7 @@ public:
 
     ~Image ()
     {
+        set_data(NULL, 0);
         zbar_image_set_userdata(_img, NULL);
         zbar_image_ref(_img, -1);
     }
